--- a/config/messages/app.properties
+++ b/config/messages/app.properties
@@ -10,3 +10,16 @@ user.active=Active
 user.registered=Registered
 meal.title=Meals
 common.select=Select
+meal.create=Create meal
+meal.dateTime=dateTime
+meal.description=Description
+meal.calories=calories
+common.save=Save
+common.cancel=Cancel
+meal.fromDate=From date
+meal.toDate=To date
+meal.fromTime=From time
+meal.toTime=To time
+meal.filter=Filter
+common.update=Update
+common.delete=Delete
